# search-engine

./: .gitignore  LICENSE.md  Makefile  README.md  results.json
data/idf/: idf_values.txt
data/tf/: tf_doc_1.txt  tf_doc_10.txt  tf_doc_11.txt  tf_doc_12.txt  tf_doc_13.txt  tf_doc_14.txt  tf_doc_15.txt  tf_doc_16.txt  tf_doc_17.txt  tf_doc_18.txt  tf_doc_19.txt  tf_doc_2.txt  tf_doc_20.txt  tf_doc_21.txt  tf_doc_22.txt  tf_doc_23.txt  tf_doc_24.txt  tf_doc_25.txt  tf_doc_3.txt  tf_doc_4.txt  tf_doc_5.txt  tf_doc_6.txt  tf_doc_7.txt  tf_doc_8.txt  tf_doc_9.txt
engine/: Doxyfile  Makefile
engine/include/core/: engine.h  idf.h  tf.h  tfidf_engine.h  tokenizer.h
engine/include/json/: json.h
engine/include/sort/: quick_sort.h
engine/include/tf-idf/: engine.h  tfidf_engine.h  tokenizer.h
engine/include/utils/: utils.h
engine/src/: main.c
engine/src/core/: engine.c  idf.c  tf.c  tfidf_engine.c  tokenizer.c
engine/src/json/: json.c
engine/src/sort/: quick_sort.c
engine/src/tf-idf/: engine.c  tf.c  tfidf_engine.c  tokenizer.c
engine/src/utils/: utils.c
gui/: Cargo.toml  build.rs
gui/src/: bindings.rs  link.rs  main.rs  search.rs
include/parsing/: parsing.h
include/tf-idf/: tfidf_engine.h
include/utils/: utils.h
scrapping/: main.py  requirements.txt
src/: main.c
src/parsing/: parsing.c
src/tf-idf/: tfidf_engine.c
src/utils/: utils.c
