[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
libc = "0.2"

env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"

[build-dependencies]
cc = "1.0"
bindgen = "0.71.1"
